# sorting-algorithms

./: .gitignore  CMakeLists.txt  README.md  experiments.c  main.c  sortingAlgorithms.c  sortingAlgorithms.h  utils.c  utils.h
results/: lab_1.csv  lab_2.csv  lab_2A.csv  lab_2B-1.csv  lab_2B-2.csv  lab_2B.csv  lab_3.csv  lab_4.csv  lab_4A.csv  lab_4B.csv  lab_4C.csv  lab_4D.csv  results.csv
results/lab_1/: lab_1.csv
results/lab_2/2A/: lab_2A.csv
results/lab_2/2B/: lab_2B.csv
results/lab_3/: lab_3.csv
results/lab_4/: lab_4.csv
results/total/: total.csv
src/: main.c
src/headers/: experiments.h  sortingAlgorithms.h  utils.h
src/headers/experiments_headers/: experiments.h  total.h
src/modules/: experiments.c  sortingAlgorithms.c  utils.c
src/modules/experiments/: experiments.c  lab_1.c  lab_2.c  lab_3.c  lab_4.c  total.c
